--- a/scss/partesDelCss/_P2P3P4.scss
+++ b/scss/partesDelCss/_P2P3P4.scss
@@ -54,3 +54,196 @@
         }
     }
 }
+
+
+
+@media (min-width:701px){
+    main{
+        .cards{
+            width: 100%;
+            height: 25rem;
+            margin-bottom: 1.5rem;
+                .caja-imgCards{
+                    width: 100%;
+                    height: 100%;
+                        .imgCards{
+                            width: 100%;
+                            height: 25rem;
+                            border: solid black 1px;
+                        }
+                }
+                .caja-textoCards{
+                    position: relative;
+                    bottom: 4rem;
+                    z-index: 10;
+                    background-color: rgba(68, 68, 68, 0.6);
+                    height: 4rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                        .textoImg{
+                            color: white;
+                            font-size: 2rem;
+                        }
+                }
+                .cards:hover{
+                    transform: scale(1.1);
+                }
+        }
+        .aa{
+            height: auto;
+            width: 100%;
+            word-wrap: break-word;
+            margin-bottom: 2.6rem;
+            padding: 0 0.3rem;
+            border-bottom: solid black 2px;
+                .a{
+                    font-size: 1.1rem;
+                }
+        }
+        .caja-boton{
+            width: 6rem;
+            height: 2rem;
+            margin: auto;
+                .boton{
+                    width: 100%;
+                    height: 100%;
+                }
+        }
+        
+    }
+}
+
+
+
+
+@media (min-width:1000px){
+    main{
+        .carousel-tamaño{
+            width: 100%;
+            height: 35rem;
+            margin: 0 auto;
+                .img-carousel{
+                    margin-top: 1rem;
+                    width: 20rem;
+                    height: 35rem;
+                }
+        }
+        .grid-plantas{
+            display: grid;
+            grid-template-areas: 
+            "card1  card2"
+            "card3  card4"
+            "card5  card6"
+            "card7  card8"
+            "card9  card10"
+            "card11 card12"
+            "card13 card14"
+            "card15 card16";
+                .card1{
+                    grid-area: card1;
+                }
+                .card2{
+                    grid-area: card2;
+                }
+                .card3{
+                    grid-area: card3;
+                }
+                .card4{
+                    grid-area: card4;
+                }
+                .card5{
+                    grid-area: card5;
+                }
+                .card6{
+                    grid-area: card6;
+                }
+                .card7{
+                    grid-area: card7;
+                }
+                .card8{
+                    grid-area: card8;
+                }
+                .card9{
+                    grid-area: card9;
+                }
+                .card10{
+                    grid-area: card10;
+                }
+                .card11{
+                    grid-area: card11;
+                }
+                .card12{
+                    grid-area: card12;
+                }
+                .card13{
+                    grid-area: card13;
+                }
+                .card14{
+                    grid-area: card14;
+                }
+                .card15{
+                    grid-area: card15;
+                }
+                .card16{
+                    grid-area: card16;
+                }
+                .contenedor-cards{
+                    margin-left: 0.5rem;
+                    margin-right: 0.5rem;
+                        .cards{
+                            width: 100%;
+                            height: 20rem;
+                            margin-bottom: 1.5rem;
+                                .caja-imgCards{
+                                    width: 100%;
+                                    height: 100%;
+                                        .imgCards{
+                                            width: 100%;
+                                            height: 20rem;
+                                            border: solid black 1px;
+                                        }
+                                }
+                                .caja-textoCards{
+                                    position: relative;
+                                    bottom: 4rem;
+                                    z-index: 10;
+                                    background-color: rgba(68, 68, 68, 0.6);
+                                    height: 4rem;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                        .textoImg{
+                                            color: white;
+                                            font-size: 2rem;
+                                        }
+                                }
+                                .cards:hover{
+                                    transform: scale(1.03);
+                                    box-shadow: 0rem 0.5rem 1rem 0 black;
+                                }
+                        }
+                }
+                .aa{
+                    height: auto;
+                    width: 100%;
+                    word-wrap: break-word;
+                    margin-bottom: 2.6rem;
+                    padding: 0 0.3rem;
+                    border-bottom: solid black 2px;
+                        .a{
+                            font-size: 1.1rem;
+                        }
+                }
+        }
+        .caja-boton{
+            width: 6rem;
+            height: 2rem;
+            margin: auto;
+                .boton{
+                    width: 100%;
+                    height: 100%;
+                }
+        }
+    }
+}
