--- a/scss/partesDelCss/_P5.scss
+++ b/scss/partesDelCss/_P5.scss
@@ -84,5 +84,84 @@
 
 
 @media (min-width:701px){
-    
+    .mainP5{
+        background-image: url(../img/plantaPaisajeFondo2.jpg);
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        margin: 0 2rem 0.5rem 2rem;
+        form{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 30rem;
+            margin: 1rem 0 0 0;
+            h2{
+                font-size: 2rem;
+                margin: 0 auto;
+            }
+            .caja-formulario{ 
+                width: 80%;  
+                height: 15%; 
+                margin-top: 1rem; 
+                .formulario{
+                    width: 100%;
+                    height: 100%;
+                    border-top: none;
+                    border-right: none;
+                    border-color: rgb(209, 246, 193);
+                    padding-top:2.3rem;
+                    padding-left: 0.1rem;
+                    background-color: transparent;
+                    font-size: 1.5rem;
+                }
+            }
+            .formulario:focus{
+                box-shadow: 0rem 0.5rem 1rem 0 black;
+                background-color: rgba(221, 220, 220, 0.863);
+                outline: none;
+            }
+            .formulario::placeholder{
+                color: rgb(161, 100, 56);
+                font-size: 1.5rem;
+                padding-left: 0.3rem;
+            }
+            .caja-textarea{ 
+                width: 80%;  
+                height: 40%; 
+                margin-top: 1rem; 
+                    .textarea{
+                        width: 100%;
+                        height: 100%;
+                        resize: none;
+                        background-color: transparent;
+                        border-top: none;
+                        border-color: rgb(209, 246, 193);
+                        font-size: 1.2rem;
+                        padding-left: 0.1rem;
+                    }
+            }
+            .textarea:focus{
+                box-shadow: 0rem 0.5rem 1rem 0 black;
+                background-color: rgba(221, 220, 220, 0.863);
+                outline: none;
+            }
+            .textarea::placeholder{
+                color: rgb(161, 100, 56);
+                font-size: 1.5rem;
+                text-align: center;
+                padding-top: 4rem;
+            }
+            .caja-botonP5{
+                width: 6rem;
+                height: 2rem;
+                margin-top: 0.5rem;
+                margin-bottom: 0.5rem;
+                    .botonP5{
+                        width: 100%;
+                        height: 100%;
+                    }
+            }
+        }
+    }
 }
