--- a/scss/partesDelCss/_header.scss
+++ b/scss/partesDelCss/_header.scss
@@ -19,18 +19,24 @@
                     margin-left: 1rem;
             }
         }
+        del{
+            text-decoration: none;
+        }
     }
 
 
 
 
-@media (min-width:701px){
+@media (min-width:701px) and (max-width:767px){
         .navbar-color{
             background-color: rgb(209, 246, 193);
         }
             ul li a{
                 font-size: 1rem;
                 font-weight: bolder;
+                    del{
+                        text-decoration: none;
+                    }
             }
                 .caja-iconos{
                     position: sticky;
@@ -47,6 +53,29 @@
                 }
         }
 
+
+        @media (min-width:768px){
+            .navbar-color{
+                background-color: rgb(209, 246, 193);
+            }
+                ul li a{
+                    font-size: 1rem;
+                    font-weight: bolder;
+                }
+                    .caja-iconos{
+                        position: sticky;
+                        top: 0rem;
+                        display: flex;
+                        justify-content: center;
+                        background-color: rgb(161, 100, 56, 0.8);
+                        z-index: 20;
+                        .icono{ 
+                            width: 4rem;
+                            height: 4rem;
+                            margin-left: 1.8rem;
+                        }
+                    }
+        }
 
 
 @media (min-width:1000px){
