--- a/scss/partesDelCss/_P1.scss
+++ b/scss/partesDelCss/_P1.scss
@@ -180,7 +180,7 @@
 
 @media (min-width:1000px){
     body{ 
-        background-color: white;
+        background-color: rgba(221, 220, 220, 0.863);
         font-size: 62.5%;
         .caja-h1{
             border-bottom: dotted black 2px;
