--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@
 }
 @media (min-width: 1000px) {
   body {
-    background-color: white;
+    background-color: rgba(221, 220, 220, 0.863);
     font-size: 62.5%;
   }
   body .caja-h1 {
