--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@
 }
 @media (min-width: 768px) {
   .background-carousel-texto {
-    background-color: rgba(237, 233, 233, 0.3);
+    background-color: rgba(237, 233, 233, 0.5);
   }
   .font-size-h5 {
     font-size: 1.5rem;
@@ -592,7 +592,7 @@
 }
 @media (max-width: 700px) {
   .mainP5 {
-    background-image: url(../img/plantasPaisajeFondo.jpg);
+    background-image: url(../../img/plantasPaisajeFondo.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 0 2rem 0.5rem 2rem;
@@ -674,7 +674,7 @@
 }
 @media (min-width: 701px) {
   .mainP5 {
-    background-image: url(../img/plantaPaisajeFondo2.jpg);
+    background-image: url(../../img/plantasPaisajeFondo.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 0 2rem 0.5rem 2rem;
@@ -754,6 +754,14 @@
     height: 100%;
   }
 }
+@media (min-width: 1000px) {
+  .mainP5 {
+    background-image: url(../../img/paisajeFondoDesktop.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 0 2rem 0.5rem 2rem;
+  }
+}
 @media (max-width: 700px) {
   footer {
     display: flex;
@@ -784,6 +792,12 @@
     justify-content: center;
     align-items: center;
     font-size: 0.8rem;
+  }
+  footer .footer-derecha p {
+    color: white;
+  }
+  footer .footer-derecha p b {
+    color: black;
   }
 }
 @media (min-width: 701px) {
@@ -817,8 +831,13 @@
     align-items: center;
     font-size: 1rem;
   }
+  footer .footer-derecha p {
+    color: white;
+  }
+  footer .footer-derecha p b {
+    color: black;
+  }
 }
-/**propiedades medida desktop**/
 @media (min-width: 1000px) {
   footer .footer-izquierda {
     width: 50%;
