--- a/scss/partesDelCss/_P5.scss
+++ b/scss/partesDelCss/_P5.scss
@@ -1,6 +1,6 @@
 @media (max-width:700px){
     .mainP5{
-        background-image: url(../../img/plantasPaisajeFondo.jpg);
+        background-image: url(../img/plantasPaisajeFondo.jpg);
         background-repeat: no-repeat;
         background-size: 100% 100%;
         margin: 0 2rem 0.5rem 2rem;
@@ -85,7 +85,7 @@
 
 @media (min-width:701px){
     .mainP5{
-        background-image: url(../../img/plantasPaisajeFondo.jpg);
+        background-image: url(../img/plantasPaisajeFondo.jpg);
         background-repeat: no-repeat;
         background-size: 100% 100%;
         margin: 0 2rem 0.5rem 2rem;
@@ -169,7 +169,7 @@
 
 @media(min-width:1000px){
     .mainP5{
-        background-image: url(../../img/paisajeFondoDesktop.jpg);
+        background-image: url(../img/paisajeFondoDesktop.jpg);
         background-repeat: no-repeat;
         background-size: 100% 100%;
         margin: 0 2rem 0.5rem 2rem;
