--- a/scss/partesDelCss/_P5.scss
+++ b/scss/partesDelCss/_P5.scss
@@ -160,6 +160,7 @@
                     .botonP5{
                         width: 100%;
                         height: 100%;
+                        cursor: pointer;
                     }
             }
         }
