--- a/scss/partesDelCss/_P1.scss
+++ b/scss/partesDelCss/_P1.scss
@@ -272,6 +272,7 @@
                     .boton{
                         width: 100%;
                         height: 100%;
+                        cursor: pointer;
                     }
             }
         }
